# fingwit

./: .gitignore  Makefile  README.md  fingwit  fingwit.pam_config  fingwit.pot  generate_desktop_files  makepot  meson.build  pam_fingwit.c  pam_fingwit.py  test
appimage/: Dockerfile  build-appimage-docker.sh  build.sh
data/: fingwit.desktop.in  meson.build  meson_install_schemas.py
data/fingwit/: fingwit.css  fingwit.ui
debian/: changelog  control  copyright  fingwit.install  libpam-fingwit.install  rules
po/: LINGUAS  am.po  ar.po  be.po  bg.po  br.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fil.po  fingwit-fr.po  fr.po  fr_CA.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  ko.po  lo.po  lv.po  meson.build  ml.po  ms.po  nb.po  nl.po  (+19 more)
usr/lib/fingwit/: fingwit.py
usr/share/applications/: fingwit.desktop
usr/share/fingwit/: fingwit.ui
usr/share/glib-2.0/schemas/: org.x.fingwit.gschema.xml
